cli/tests/snapshots/help__btrfs_rescue_fix_device_size.snap
---
source: cli/tests/help.rs
expression: text
---
Re-align device and super block sizes

Usage: fix-device-size <DEVICE>

Arguments:
  <DEVICE>
          Path to the btrfs device

Options:
  -h, --help
          Print help
