cli/tests/snapshots/help__btrfs_rescue_super_recover.snap
---
source: cli/tests/help.rs
expression: text
---
Recover bad superblocks from good copies

Reads all superblock mirrors and validates their checksums and magic. If any
mirrors are corrupted, the best valid copy (highest generation) is written back
to all mirrors.

The device must not be mounted.

Usage: super-recover [OPTIONS] <DEVICE>

Arguments:
  <DEVICE>
          Path to the device

Options:
  -y, --yes
          Assume an answer of 'yes' to all questions

  -h, --help
          Print help (see a summary with '-h')
