cli/tests/snapshots/help__btrfs_restore.snap
---
source: cli/tests/help.rs
expression: text
---
Try to restore files from a damaged filesystem (unmounted).

Attempt to recover files from a damaged or inaccessible btrfs filesystem by
scanning the raw filesystem structures. This command works on unmounted devices
and can recover files even when the filesystem cannot be mounted normally.
Recovery options allow selective restoration of files, metadata, and extended
attributes. Requires CAP_SYS_ADMIN.

Usage: restore [OPTIONS] <DEVICE> [PATH]

Arguments:
  <DEVICE>
          Block device containing the damaged filesystem

  [PATH]
          Destination path for recovered files (not needed with --list-roots)

Options:
  -D, --dry-run
          Dry run (only list files that would be recovered)

  -i, --ignore-errors
          Ignore errors

  -o, --overwrite
          Overwrite existing files

  -m, --metadata
          Restore owner, mode and times

  -S, --symlink
          Restore symbolic links

  -s, --snapshots
          Get snapshots

  -x, --xattr
          Restore extended attributes

      --path-regex <PATH_REGEX>
          Restore only filenames matching regex

  -c, --ignore-case
          Ignore case (used with --path-regex)

  -d, --find-dir
          Find dir

  -l, --list-roots
          List tree roots

  -f, --fs-location <FS_LOCATION>
          Filesystem location (bytenr)

  -r, --root <ROOT>
          Root objectid

  -t, --tree-location <TREE_LOCATION>
          Tree location (bytenr)

  -u, --super <SUPER_MIRROR>
          Super mirror index

  -h, --help
          Print help (see a summary with '-h')
