cli/tests/snapshots/help__btrfs_scrub_status.snap
---
source: cli/tests/help.rs
expression: text
---
Show the status of a running or finished scrub

Usage: status [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem or a device

Options:
  -d, --device
          Show stats per device

  -R
          Print full raw data instead of summary

  -h, --help
          Print help
