cli/tests/snapshots/help__btrfs_send.snap
---
source: cli/tests/help.rs
expression: text
---
Send the subvolume(s) to stdout.

Generate a stream representation of one or more subvolumes that can be
transmitted over the network or stored for later restoration. Streams are
incremental and can be based on a parent subvolume to only send changes. The
stream output is in btrfs send format and can be received with the receive
command. Requires CAP_SYS_ADMIN.

Usage: send [OPTIONS] <SUBVOLUMES>...

Arguments:
  <SUBVOLUMES>...
          Subvolume(s) to send

Options:
  -e, --omit-end-cmd
          Omit end-cmd marker between subvolumes

  -f, --outfile <OUTFILE>
          Write output to a file instead of stdout

  -h, --help
          Print help (see a summary with '-h')

Incremental:
  -p, --parent <PARENT>
          Send an incremental stream from parent to the subvolume

  -c, --clone-src <CLONE_SRC>
          Use this snapshot as a clone source (may be given multiple times)

Protocol:
      --no-data
          Send in NO_FILE_DATA mode

      --proto <PROTO>
          Use send protocol version N (0 = highest supported by kernel)

      --compressed-data
          Send compressed data directly without decompressing
